[gd_scene load_steps=4 format=3 uid="uid://eelpg4lpwofv"]

[ext_resource type="Script" path="res://src/FlameSkill/flame.gd" id="1_btblh"]
[ext_resource type="Texture2D" uid="uid://dibtbkpqf8ffm" path="res://assets/2D Pixel Dungeon Asset Pack/items and trap_animation/flamethrower/flame.png" id="2_hw3r0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_io47l"]
radius = 7.693

[node name="flame" type="CharacterBody2D"]
script = ExtResource("1_btblh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(4, -3)
scale = Vector2(1.875, 1.5)
shape = SubResource("CircleShape2D_io47l")

[node name="flame" type="Area2D" parent="."]
position = Vector2(4.76837e-07, 3)
scale = Vector2(1.875, 1.5)

[node name="Sprite2D" type="Sprite2D" parent="flame"]
z_index = 100
position = Vector2(7.62939e-06, -3.33333)
scale = Vector2(0.0558333, 0.0675456)
texture = ExtResource("2_hw3r0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="flame"]
position = Vector2(2.13333, -4)
shape = SubResource("CircleShape2D_io47l")

[node name="Timer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6, -3)
scale = Vector2(1.6, 1.3)

[connection signal="body_entered" from="flame" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
